--- a/vizzy_tactile/CMakeLists.txt
+++ b/vizzy_tactile/CMakeLists.txt
@@ -121,6 +121,9 @@ catkin_package(
    DEPENDS system_lib
 )
 
+
+include_directories(${catkin_INCLUDE_DIRS})
+
 ###########
 ## Build ##
 ###########
