--- a/vizzy_tactile/CMakeLists.txt
+++ b/vizzy_tactile/CMakeLists.txt
@@ -116,7 +116,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-   LIBRARIES vizzy_tactile
+#   LIBRARIES vizzy_tactile
    CATKIN_DEPENDS roscpp std_msgs message_runtime
    DEPENDS system_lib
 )
